k8s/1-http-virtualservice-apiseguridad.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apiseguridad.vs
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway                      # 1
  http:
    - route:
        - destination:
            host: apiseguridad
            port:
              number: 8081
    # - match:
    #     - uri:
    #         prefix: /correlations
    #   route:
    #     - destination:
    #         host: lab02
    #         port:
    #           number: 7071
