k8s/2-http-virtualservice-apiuxbanca.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apiuxbanca-virtual-services
spec:
  hosts:
    - "apiuxbanca.vs"
  gateways:
    - http-gateway                      # 1
  http:
    - route:
        - destination:
            host: apiuxbanca
            port:
              number: 80
