k8s/http-virtualservice-opbanca.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: opbanca-virtual-services
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway                      # 1
  http:
    - match:
        - uri:
            prefix: /opbanca
      route:
        - destination:
            host: apiopbanca
            port:
              number: 8090
    # - match:
    #     - uri:
    #         prefix: /correlations
    #   route:
    #     - destination:
    #         host: lab02
    #         port:
    #           number: 7071
